fix unilaterale visualizzazione body con firefox.

--- a/client_v2/src/scss/_common.scss
+++ b/client_v2/src/scss/_common.scss
@@ -14,7 +14,7 @@ body,
 html {
     height: 100%;
     width: 100%;
-    display: table;
+    display: inline-block;
 }
 
 body {
